# OCPP-simulation

./: MakeFile  README.md  ocpp.c  ocpp.h  ocpp_driver.c
diagrams-and-flowcharts/: .$evse-boot-process-flowchart.drawio.bkp  evse-boot-process-flowchart.drawio
ocpp-protocol/: CMakeLists.txt  Makefile  README.md
ocpp-protocol-python/: client.py
ocpp-protocol/src/: ocpp.c  ocpp.h  ocpp_driver.c
python-web-socket-server/: index.html  server.py
